--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,11 +19,19 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
 # ============================
+# ============================
 # SPRING MAIL CONFIG
 # ============================
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=${MAIL_USERNAME:mail2moht@gmail.com}
-spring.mail.password=${MAIL_PASSWORD:ylnytmuvxzvtpnys}
+spring.mail.username=mail2moht@gmail.com
+spring.mail.password=ylnytmuvxzvtpnys
+
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
+spring.mail.properties.mail.smtp.ssl.trust=smtp.gmail.com
+spring.mail.properties.mail.smtp.ssl.protocols=TLSv1.2
+spring.mail.properties.mail.smtp.connectiontimeout=10000
+spring.mail.properties.mail.smtp.timeout=10000
+spring.mail.properties.mail.smtp.writetimeout=10000
